[package]
name = "top-kat"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "top_kat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"]}
rand = { version = "0.7", features = ["small_rng"] }
streaming_algorithms = {version = "0.3.0"}