[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "top-kat"
version = "0.1.0"
description = "A collection of streaming algorithms."
readme = "README.md"
keywords = ["streaming", "algorithms"]
authors = [
  {name = "cat pouch", email = "isaac@bytewax.io" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
